--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ li>a{
     padding: 15px;
     border: none;
     padding-left: px;
-    font-size: medium;
+    font-size: bold;
     cursor: pointer;
 }
 
