j'ai géré la responsivité

--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ header{
 .products{
     width: 70%;
     display: flex;
-    justify-content: center;
+    justify-content:flex-end;
+    padding-right: 5%;
 }
 nav ul{
     display: flex;
     list-style: none;
     text-decoration: none;
-    padding-left: 85%;
 }
 nav li{
     text-decoration: none;
@@ -70,9 +70,6 @@ li>a{
     width: 100%;
     display: flex;
     flex-direction: row;
-    border-top: none;
-    border-left: none;
-    border-right: none;
     padding: 20px;
     font-size: 15px;
 
@@ -84,6 +81,7 @@ li>a{
     font-family: 'Ultra', serif;
     font-weight: bolder;
     width: 15%;
+    order: 1;
 }
 .npm p{
     font-weight: 900;
@@ -92,17 +90,29 @@ li>a{
 }
 .search{display: block;
     width: 70%;
-    margin-left: -100px;
+    /* margin-left: -100px; */
     position: relative;
+    order: 2;
 
 }
 .btt{
     display: flex;
-    padding-left: 40px;
+    justify-content: center;
+    width: 15%;
+    margin-left: 40px;
+    order: 3;
+    
+}
+.beuss{
+    display: flex;
+    width: 100%;
+    
+    
 }
 .b1{
     background-color: #ffffff;
     height: 100%;
+    width: 50%;
     padding: 15px;
     font-size: medium;
     border: 1px solid rgb(202, 199, 199);
@@ -111,6 +121,7 @@ li>a{
 .b2{
     background-color: #ffffff;
     height: 100%;
+    width: 50%;
     padding: 15px;
     border: none;
     padding-left: px;
@@ -119,10 +130,7 @@ li>a{
 }
 
 ion-icon{
-    /* z-index: 5;
-    position: absolute;
-    left: 10%;
-    top: 18%; */
+    
     padding: 20px;
     font-size: 20px;
 }
@@ -153,7 +161,7 @@ ion-icon{
   /* Style the submit button */
   form.weur button {
 
-    /* width: 10%; */
+    
     padding: 15px;
     background: #000000;
     color: white;
@@ -273,3 +281,292 @@ ion-icon{
 }
 
 /*-------------------Section 3-------------------*/
+
+@media only screen and (max-width: 1210px){
+    .products{
+        width: 5%;
+        display: flex;
+        justify-content: start;
+    }
+    nav ul{
+        display: flex;
+        list-style: none;
+        text-decoration: none;
+        padding-left: 70%;
+    }
+}
+@media only screen and (max-width: 1106px){
+    .products{
+        width: 5%;
+        display: flex;
+        justify-content: start;
+    }
+    nav ul{
+        display: flex;
+        list-style: none;
+        text-decoration: none;
+        padding-left: 20%;
+    }
+    .header2{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        padding: 20px;
+        font-size: 15px;
+    
+        
+    }
+    .npm{
+        display: block;
+        font-family: 'Playfair Display', serif;
+        font-family: 'Ultra', serif;
+        font-weight: bolder;
+        width: 15%;
+    }
+    .search{
+        display: block;
+        width: 85%;
+        padding-left: 1px;
+        position: relative;
+    
+    }
+    .btt{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        padding-top: 5px;
+        
+    }
+      ion-icon{
+        /* z-index: 5;
+        position: absolute;
+        left: 10%;
+        top: 18%; */
+        padding: 20px;
+        padding-left: 0px;
+        font-size: 20px;
+    }
+   
+}
+@media only screen and (max-width: 933px){ 
+    .products{
+        width: 5%;
+        display: flex;
+        justify-content: start;
+    }
+    nav ul{
+        display: flex;
+        list-style: none;
+        text-decoration: none;
+        padding-left: 20%;
+    }
+    .header2{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        padding: 20px;
+        font-size: 15px;
+    
+        
+    }
+    .npm{
+        display: inline-block;
+        font-family: 'Playfair Display', serif;
+        font-family: 'Ultra', serif;
+        font-weight: bolder;
+        width: 15%;
+    }
+    .search{
+        /* display: inline-block; */
+        width: 85%;
+        padding-left: 1px;
+        position: relative;
+    
+    }
+    .btt{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+      ion-icon{
+        /* z-index: 5;
+        position: absolute;
+        left: 10%;
+        top: 18%; */
+        padding: 20px;
+        padding-left: 0px;
+        font-size: 20px;
+    }
+    .weur {
+        z-index: 0;
+        
+        padding-left: 0;
+        font-size: 17px;
+        border: 1px solid rgb(226, 223, 223);
+        border-radius: 2px 0 0 2px;
+        background: #f1f1f1;
+        display: grid;
+        grid-template-columns:70% 30%;
+      }
+   
+        
+} 
+
+@media only screen and (max-width: 751px){ 
+    .products{
+        width: 5%;
+        display: flex;
+        justify-content: start;
+    }
+    nav ul{
+        display: flex;
+        list-style: none;
+        text-decoration: none;
+        padding-left: 20%;
+    }
+    .header2{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        padding: 20px;
+        font-size: 15px;
+        
+    
+        
+    }
+    .npm{
+        display: inline-block;
+        font-family: 'Playfair Display', serif;
+        font-family: 'Ultra', serif;
+        font-weight: bolder;
+        width: 15%;
+        order: 1;
+    }
+    .search{
+        /* display: inline-block; */
+        width: 90%;
+        padding-left: 1px;
+        position: relative;
+        order: 3;
+    }
+    .btt{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        order: 2;
+    }
+      ion-icon{
+        /* z-index: 5;
+        position: absolute;
+        left: 10%;
+        top: 18%; */
+        padding: 20px;
+        padding-left: 0px;
+        font-size: 20px;
+    }
+    .weur {
+        z-index: 0;
+        
+        padding-left: 0;
+        font-size: 17px;
+        border: 1px solid rgb(226, 223, 223);
+        border-radius: 2px 0 0 2px;
+        background: #f1f1f1;
+        display: grid;
+        grid-template-columns:70% 30%;
+      }
+   
+        
+} 
+@media only screen and (max-width: 547px){ 
+    .products{
+        width: 5%;
+        display: flex;
+        justify-content: start;
+    }
+    nav ul{
+        display: flex;
+        list-style: none;
+        text-decoration: none;
+        padding-left: 20%;
+    }
+    .header2{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        padding: 20px;
+        font-size: 15px;
+        
+    
+        
+    }
+    .npm{
+        display: inline-block;
+        font-family: 'Playfair Display', serif;
+        font-family: 'Ultra', serif;
+        font-weight: bolder;
+        width: 15%;
+        order: 1;
+    }
+    .search{
+        /* display: inline-block; */
+        width: 85%;
+        padding-left: 1px;
+        position: relative;
+        order: 3;
+    }
+    .btt{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        order: 2;
+    }
+      ion-icon{
+        /* z-index: 5;
+        position: absolute;
+        left: 10%;
+        top: 18%; */
+        padding: 20px;
+        padding-left: 0px;
+        font-size: 20px;
+    }
+    .weur {
+        z-index: 0;
+        
+        padding-left: 0;
+        font-size: 17px;
+        border: 1px solid rgb(226, 223, 223);
+        border-radius: 2px 0 0 2px;
+        background: #f1f1f1;
+        display: grid;
+        grid-template-columns:70% 30%;
+      }
+      .madness{
+        width: 30%;
+        display: none;
+    }
+   
+        
+} 
